# programming_challenges

./: .gitignore
3n+1/: CMakeLists.txt
3n+1/src/: 3n_1.cpp  3n_1.h
3n+1/test/: 3n_1_unittest.cpp
lcd_display/src/: lcd_display.cpp
lcd_display/test/: CMakeLists.txt  lcd_display_test.cpp
minesweeper/: CMakeLists.txt
minesweeper/src/: Minesweeper.cpp  Minesweeper.h
minesweeper/test/: Minesweeper_unittest.cpp
start_prj/: CMakeLists.txt
start_prj/src/: CMakeLists.txt  the_trip.cpp
start_prj/test/: CMakeLists.txt  basic_check.cpp
the_trip/: CMakeLists.txt
the_trip/src/: CMakeLists.txt  the_trip.cpp
the_trip/test/: CMakeLists.txt  the_trip_test.cpp
